--- a/play.html
+++ b/play.html
@@ -92,7 +92,7 @@
                                 height="100"
                                 width="100"
                                 >
-                                <path d="M95,5 5,5 5,95 Q 95,95 95,5" fill="violet" />
+                                <path d="M95,5 5,5 5,95 Q 95,95 95,5" fill="maroon" />
                                 </svg>
                             </button>
                         </td>
