Finished main.css and fixed minor errors elsewhere

--- a/scores.html
+++ b/scores.html
@@ -38,7 +38,7 @@
         </header>
 
         <main class="container-fluid bg-secondary text-center">
-            <table class="table table-warning table-striped-colums">
+            <table class="table table-warning table-striped-columns">
                 <thead class="table-dark">
                     <tr>
                         <th>#</th>
