--- a/play.html
+++ b/play.html
@@ -52,7 +52,7 @@
                     <div class="controls center">
                         <div class="game-name">Simon<sup>&reg;</sup></div>
                         <div class="score center">--</div>
-                        <button class="btn btn-primary">Reset</button>
+                        <button class="btn btn-danger">Reset</button>
                     </div>
                 </div>
             </div>
